# discord-yamusic-integration

./: CMakeLists.txt  README.md  discord_app.cpp  pack_web_extension.sh
browser-extension/: discord_yamusic_data_crawler.js  manifest.json
